[package]
name = "star-racer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
cgmath = "0.18.0"
chrono = "0.4.44"
clap = {version = "4.6.0", features = ["derive"]}
colored = "3.1.1"
crossbeam = {version = "0.8.4", features = ["crossbeam-channel"]}
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
nalgebra = "0.34.2"
rand = "0.10.0"
rapier3d-f64 = "0.32.0"
regex = "1.12.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version = "1.50.0", features = ["full"]}
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
